...
    <string name="state_of_progress">In-Progress or Completed or stopped</string>
    <string name="dummy">Dummy</string>
    <string name="enter_anything">Enter anything</string>
    <string name="enter_city">Enter city</string>
    <string name="get_weather">What\'s the weather ?</string>
    <string name="no_query">No query entered, nothing to search for.</string>
    <string name="search">Search</string>
    <string name="weather_condition">Weather condition</string>
    <string name="region">Region</string>
    <string name="day">Day</string>
    <string name="max">Max (ºC)</string>
    <string name="min">Min (ºC)</string>
    <string name="title_activity_add_weather">What\'s the weather ? Add (+) to know weather of any place provided by the OpenMap API </string>
...
